# s2i-example-micropipenv

./: Pipfile  README.rst  app.py  openshift.yaml  pyproject.toml  requirements.in  requirements.txt
